# rust_pool

mobile_app/: settings.gradle.kts
mobile_app/app/: build.gradle.kts
mobile_app/app/src/androidTest/java/com/maxgubin/poolcontrol/: ExampleInstrumentedTest.kt
mobile_app/app/src/main/: AndroidManifest.xml
mobile_app/app/src/main/java/com/maxgubin/poolcontrol/: MainActivity.kt
mobile_app/app/src/main/java/com/maxgubin/poolcontrol/ui/theme/: Color.kt  Theme.kt  Type.kt
mobile_app/app/src/main/res/values/: strings.xml
mobile_app/app/src/test/java/com/maxgubin/poolcontrol/: ExampleUnitTest.kt
mobile_app/gradle/wrapper/: gradle-wrapper.properties
pentair_cargo/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config,json  config.json  docker-compose.debug.yml
pentair_cargo/assets/: script.js  style.css
pentair_cargo/cert/: cert.pem  key.pem
pentair_cargo/config/: default.json  simple.json
pentair_cargo/debug/: port_debug.rs
pentair_cargo/firebase/: .firebaserc  firebase.json  package-lock.json
pentair_cargo/firebase/functions/: index.js
pentair_cargo/src/: config.rs  config_json.rs  main.rs  pool.rs  protocol.rs  ui.rs
pentair_cargo/src/config/: config_json.rs  controller.rs  mobile_app.rs
pentair_cargo/src/pool/: message.rs  protocol.rs  serial.rs  system_state.rs
pentair_cargo/src/pool/message/: system_state.rs
pentair_cargo/src/pool/protocol/: system_state.rs
pentair_cargo/templates/: index.html  logs_table.html
