[package]
name = "pentair_cargo"
description = "A port of https://github.com/tagyoureit/nodejs-poolController "
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
bytes = "1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serial = "0.4.0"
log = "0.4.22"
whoami = "1.5.1"
clap = { version = "4.5.14", features = ["derive"] }
simplelog = "0.12.2"
axum = {version="0.7.5", features = ["ws"]}
tower-http = {version="0.5.2", features=["full"]}
askama = "0.12.1"
tokio-rustls = "0.26.0"
rustls = "0.23.13"
rustls-pemfile = "2.1.3"
axum-server = {version="0.7.1", features=["tls-rustls"]}
futures = "0.3.30"
