[package]
name = "pentair_cargo"
description = "A port of https://github.com/tagyoureit/nodejs-poolController "
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="pentair"
path="src/main.rs"

# Debug binary that sends specific sequence 
[[bin]]
name="port_debug"
path="debug/port_debug.rs"

[dependencies]
askama = "0.12.1"
axum = {version="0.8", features = ["ws"]}
axum-server = {version="0.7.1", features=["tls-rustls"]}
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.14", features = ["derive"] }
futures = "0.3.30"
futures-util = "0.3.31"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
log = "0.4.22"
reqwest = { version = "0.12", features = ["json"] }
rustls = "0.23.13"
rustls-pemfile = "2.1.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serial = "0.4.0"
simplelog = "0.12.2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.0"
tower-http = {version="0.6.2", features=["full"]}
whoami = "1.5.1"
